--- a/src/app/clip/clip.component.html
+++ b/src/app/clip/clip.component.html
@@ -27,5 +27,6 @@
 <!-- More Clips -->
 <div class="container mx-auto my-8">
   <h2 class="mt-6 text-2xl">More Clips</h2>
-  <p>None</p>
+  <!-- Video List -->
+  <app-clips-list [scrollable]="false"></app-clips-list>
 </div>
