--- a/src/app/video/manage/manage.component.html
+++ b/src/app/video/manage/manage.component.html
@@ -25,7 +25,7 @@
       class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary flex flex-col justify-start"
     >
       <!-- Image -->
-      <a href="#">
+      <a [routerLink]="['/', 'clip', clip.docID]">
         <img
           class="card-img-top rounded-tl-2xl w-full"
           [src]="clip.screenshotURL"
@@ -36,7 +36,10 @@
       <!-- Body -->
       <div class="p-6 text-2xl">
         <!-- Link -->
-        <a [routerLink]="['/', 'clip', clip.docID]" class="font-bold mb-2">
+        <a
+          [routerLink]="['/', 'clip', clip.docID]"
+          class="font-bold mb-2 hover:text-indigo-400"
+        >
           {{ clip.title }}
         </a>
         <a
