--- a/src/app/video/upload/upload.component.html
+++ b/src/app/video/upload/upload.component.html
@@ -10,6 +10,7 @@
         >rotate_right</span
       >
     </ng-container>
+
     <ng-template #uploadEditorCtr>
       <!-- Upload Dropbox -->
       <ng-container *ngIf="!nextStep; else uploadFormCtr">
@@ -21,7 +22,9 @@
           (dragleave)="isDragover = false"
           (mouseleave)="isDragover = false"
           (drop)="storeFile($event)"
-          [ngClass]="{ 'bg-indigo-400 border-indigo-400 solid': isDragover }"
+          [ngClass]="{
+            'bg-indigo-400 border-indigo-400 border-solid': isDragover
+          }"
           class="w-full px-10 py-40 rounded text-center cursor-pointer border border-dashed border-gray-400 transition duration-500 hover:text-white hover:bg-indigo-400 hover:border-indigo-400 hover:border-solid text-xl"
         >
           <h5>Drop your file here (mp4 only!)</h5>
@@ -31,7 +34,11 @@
             >autorenew</span
           >
         </div>
-        <input type="file" class="mt-4" (change)="storeFile($event)" />
+        <input
+          type="file"
+          class="mt-4 cursor-pointer"
+          (change)="storeFile($event)"
+        />
       </ng-container>
       <!-- Video Editor -->
       <ng-template #uploadFormCtr>
